# FraCSPy

./: .buildinfo  .gitignore  .zenodo.json  CHANGELOG.md  CONTRIBUTING.md  LICENCE.md  MANIFEST.in  Makefile  README.md  build_docs.bat  changelog.html  citing.html  contributing.html  credits.html  environment-dev.yml  environment.yml  genindex.html  index.html  install-dev.bat  install.bat  install.sh  install_env.sh  install_pyfrac.bat  install_pyfrac.sh  installation.html  objects.inv  pyproject.toml  requirements-dev.txt  search.html  searchindex.js  setup.py  sg_execution_times.html
.doctrees/: changelog.doctree  citing.doctree  contributing.doctree  credits.doctree  index.doctree  installation.doctree  sg_execution_times.doctree
Notebooks/: 2D_LSM_ForSeminar.ipynb  2D_Recs_LSM-Copy1.ipynb  2D_Recs_LSM.ipynb  2D_SeismicModelling_BasicTTs.ipynb  3D_LSM_FromFuncs.ipynb  3D_Recs_LSM_Sum.ipynb  3D_Recs_LSM_SumAndSpread.ipynb  3D_Recs_LSM_SumAndSpread_FaultActivation.ipynb  Claires_LSM_Microseismic.ipynb  GeometryPlots.ipynb  LSM_Sofi_PointSource_AbsBds.ipynb  LoadingSofiSnaps.ipynb  MT2SDR.ipynb  MariaCamila_LabFirstBreaks.ipynb  Original_LSM_Microseismic.ipynb  SimpleForPlots_2D_Recs_LSM.ipynb  TMP_PLOTFUNCS.ipynb  kirchhoff.py  synthnoise.py  tmp_plot_seismic_line.ipynb
_modules/: index.html
_sources/: changelog.rst.txt  index.rst.txt  installation.rst.txt  sg_execution_times.rst.txt
api/: index.html
examples/: 1_1_Detection_Matched_Plotting.py  Detection_Matched_Plotting.py  Plot_DetectedEvents.py  README.txt  plot_Beachball.py  plot_ComparingBeachballs.py  plot_ComparingMTmatrices.py  plot_DetectionFunctions.py  plot_EventImages.py  plot_MTmatrix.py  (+3 more)
(+522 files in other folders)
